# dragonpulse

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
src/dragonpulse/: __init__.py
src/dragonpulse/api/: __init__.py  awards.py  base.py  opportunities.py
src/dragonpulse/cache/: __init__.py  disk_cache.py  request_budget.py
src/dragonpulse/config/: __init__.py  logging_config.py  settings.py
src/dragonpulse/models/: __init__.py  award.py  common.py  filters.py  knowledge.py  opportunity.py  proposal.py
src/dragonpulse/processors/: __init__.py  attachments.py  checklist.py  draft_store.py  embeddings.py  knowledge_base.py  llm.py  outreach.py  pricing.py  proposal.py  recommender.py  sam_scrape.py  text_extract.py
src/dragonpulse/ui/: __init__.py  detail_view.py  knowledge_view.py  manual_load.py  placeholders.py  pricing_view.py  priority_picks_view.py  proposal_view.py  search_view.py  sidebar.py  state.py  theme.py
tests/: conftest.py  test_api.py  test_cache.py  test_checklist.py  test_draft_store.py  test_manual_load.py  test_models.py  test_pricing.py  test_proposal.py  test_rag.py  test_recommender.py  test_sam_scrape.py
