[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragonpulse"
version = "0.1.0"
description = "Local-first SAM.gov opportunity discovery, outreach, pricing intel, and proposal tooling for government contractors."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "DragonPulse" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: tests that hit the live SAM.gov API (skipped unless DRAGONPULSE_RUN_LIVE=1 and a key is set)",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
# UP (pyupgrade) is intentionally omitted: we target Python 3.9 and use the
# classic typing style (Optional[...], List[...]) on purpose.
select = ["E", "F", "I", "B", "W"]
ignore = ["B008"]  # Streamlit/Pydantic patterns use calls in defaults

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # `assert False` is fine/intentional in tests

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
